--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,26 @@
 {
-  "name": "mshankenstartkit",
-  "version": "0.0.1",
-  "homepage": "",
-  "description": "A project start kit",
-  "main": "app.js",
-  "moduleType": [
-    "amd"
-  ],
-  "authors": [
-    "Edison A. Leon"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "html5shiv": "~3.7.3",
-    "respond": "~1.4.2",
-    "bootstrap": "~v4.1.0"
-  }
+    "name": "Restaurant Awards Wine And Dine",
+    "version": "0.0.1",
+    "homepage": "Restaurants.WineSpectator.com/WineAndDine",
+    "description": "A Restaurant Awards Promotional Site",
+    "main": "index.html",
+    "moduleType": [
+        "amd"
+    ],
+    "authors": [
+        "Edison A. Leon"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "html5shiv": "~3.7.3",
+        "respond": "~1.4.2",
+        "bootstrap": "~v4.3.1"
+    }
 }
