--- a/package.json
+++ b/package.json
@@ -46,18 +46,11 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "grunt": "^1.1.0",
-    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-csslint": "^2.0.0",
-    "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-htmlmin": "^3.1.0",
-    "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-uglify": "^0.11.0",
-    "grunt-jscs": "^3.0.1",
-    "grunt-rev": "^0.1.0",
-    "grunt-usemin": "^3.1.1",
     "load-grunt-configs": "^1.0.0",
     "load-grunt-tasks": "^3.2.0",
     "time-grunt": "^1.2.1"
